--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-desktop-rotation-support (1.1) unstable; urgency=medium
+
+  * Update dependencies
+
+ -- Merlijn Wajer <merlijn@wizzup.org>  Fri, 02 Oct 2020 20:57:17 +0200
+
 hildon-desktop-rotation-support (1.0) unstable; urgency=medium
 
   * Initial version
