--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-desktop-rotation-support (1.3) unstable; urgency=medium
+
+  * add support for the fts_ts in the Xiaomi Pocophone F1
+
+ -- Ivan J. <parazyd@dyne.org>  Sat, 06 Mar 2021 11:50:54 +0100
+
 hildon-desktop-rotation-support (1.2) unstable; urgency=medium
 
   * Exit with 0 in hildon-desktop-rotate-touchscreen.sh
